...
            style="@style/tx_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_name" />

        <EditText
            android:id="@+id/edt_name"
            style="@style/edt_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx_name"
            android:layout_marginTop="5dp" />

...
